# Barcelona

./: .gitignore  README.md  check_cuda.py  main.py  pyproject.toml
eagle/: __init__.py  processor.py
eagle/models/: coordinate_model.py
eagle/utils/: io.py
output/clip_146/: metadata.json  processed_data.json  raw_coordinates.json  raw_data.json
output/clip_147/: metadata.json  processed_data.json  raw_coordinates.json  raw_data.json
output/clip_148/: metadata.json  processed_data.json  raw_coordinates.json  raw_data.json
output/sequence_146_148/: metadata.json
scripts/: run_quickstart.ps1
src/: preprocess.py  stitch.py  visualize.py
